feat: type-check index expression